--- a/jyChoiReport/Base.lproj/LaunchScreen.storyboard
+++ b/jyChoiReport/Base.lproj/LaunchScreen.storyboard
@@ -26,14 +26,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QJ7-Eh-RC7">
-                                <rect key="frame" x="156.66666666666666" y="309" width="80" height="77.333333333333371"/>
+                                <rect key="frame" x="156.66666666666666" y="308.66666666666669" width="80" height="78.666666666666686"/>
                                 <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                 <color key="tintColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="9Sg-Qz-jDk"/>
                                     <constraint firstAttribute="height" constant="80" id="tor-HG-Ms8"/>
                                 </constraints>
-                                <imageReference key="image" image="book" catalog="system" symbolScale="default"/>
+                                <imageReference key="image" image="building.columns.circle.fill" catalog="system" symbolScale="default"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -52,12 +52,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="book" catalog="system" width="128" height="99"/>
+        <image name="building.columns.circle.fill" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
